                                                         -*- coding: utf-8 -*-
Changes with Apache Traffic Server 3.3.1

  *) [TS-1739] Fix TODO within varFloatFromName()
   Author: Yunkai Zhang <qiushu.zyk@taobao.com>

  *) [TS-1559] Server side termination not handled properly when a PluginVC 
   Protocol Plugin is used. Author: Yossi Gottlieb.

  *) [TS-1300] Document the usage of TSUrlStringGet() and derivatives.
   Author: Uri Shachar.

  *) [TS-1645] increase the file stat resolution on config files
   Author: Yakov Kopel <ykopel@websense.com>

  *) [TS-1557] update ua_begin_write
   Author: Aidan McGurn <aidan.mcgurn@openwave.com>

  *) [TS-1320] Reading from SSL origin can starve sending data to client.

  *) [TS-1155] POST requests that are chunked encoding hang when going
  forward to origin over SSL

  *) [TS-1634] reimplement Lua state management to support reload

  *) [TS-1716] authproxy fails to reserve an argument index in global mode

  *) [TS-1710] esi plugin enhancement such as support forward proxy
   Author: Yu Qing <zhuangyuan@taobao.com>

  *) [TS-1707] fix FreeBSD store blocks calculation
   Thanks to Ben Aitchison <ben at meh dot net dot nz>

  *) [TS-1704] null pointer dereference in dns_result
   Author: Li-Wen Hsu <lwhsu@lwhsu.org>

  *) [TS-1701] segv if header_rewrite is configured with the InkAPI and uses
   PATH or QUERY conditions. Author: John Kew.

  *) [TS-1700] disable static libraries by default.

  *) [TS-1653] prevent the crash that retry dns lookup after timeout.

  *) [TS-1006] memory management, cut down memory usage.
   Author: Yunkai Zhang <qiushu.zyk@taobao.com>

  *) [TS-1678] Simplify register_record
   Author: Yunkai Zhang <qiushu.zyk@taobao.com>

  *) [TS-1252] stats summary in cluster not working
   Author: Yunkai Zhang <qiushu.zyk@taobao.com>

  *) [TS-1679] channel_stats plugin: count 5xx response and clean up code.
   Author: Conan Wang

  *) [TS-1676] FetchSM (TSFetchUrl) cannot handle POST bodies > 32kb.
